Made the Emacs UI display internal errors.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -171,6 +171,7 @@ library
                    Utils.Function
                    Utils.Generics
                    Utils.Hash
+                   Utils.Impossible
                    Utils.IO
                    Utils.List
                    Utils.Map
