Made make test recheck everything by default. + Change the setting of AGDA_TEST_FLAGS if you don't like this.

--- a/test/fail/Makefile
+++ b/test/fail/Makefile
@@ -17,9 +17,10 @@
 TOP = ../..
 
 include $(TOP)/mk/paths.mk
+include $(TOP)/mk/config.mk
 
 # Path to Agda
-agda=$(AGDA_BIN)
+agda=$(AGDA_BIN) $(AGDA_TEST_FLAGS)
 
 # Verbosity default = 0, can be overridden
 V = 0
