--- a/Agda.cabal
+++ b/Agda.cabal
@@ -25,7 +25,7 @@ library
                    old-time >= 1 && < 2,
                    bytestring >= 0.9.0.1 && < 1,
                    array >= 0.1 && < 1,
-                   binary >= 0.4.1 && < 1,
+                   binary == 0.4.1,
                    zlib >= 0.4.0.1 && < 1,
                    filepath >= 1.1 && < 2
   if !os(windows)
