MAlonzo FFI support

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -27,7 +27,8 @@ library
                    array >= 0.1 && < 1,
                    binary == 0.4.1,
                    zlib >= 0.4.0.1 && < 1,
-                   filepath >= 1.1 && < 2
+                   filepath >= 1.1 && < 2,
+                   process >= 1.0 && < 2
   if !os(windows)
     build-depends: readline >= 1.0.1 && < 2
   build-tools:     happy >= 1.15 && < 2,
