added the stream eating example

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -14,99 +14,104 @@ test_files = Vec.agda Lookup.agda Binary.agda Setoid.agda \
 			 TT.agda ISWIM.agda ParenDepTac.agda \
 			 AIM5/Hedberg/SET.agda AIM5/yoshiki/SET.agda \
 			 SimpleTypes.agda Monad.agda Miller/Pat.agda \
-                         syntax/Literate.lagda \
+       syntax/Literate.lagda StreamEating.agda \
        $(shell find Introduction -name '*.agda')
 tests	   = $(patsubst %,%.test,$(test_files))
 
+echo = $(shell which echo)
+ifeq ("$(echo)","")
+echo = echo
+endif
+
 term1 : Termination/Mutual.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) $<
+	@$(echo) "ok"
 
 term2 : Termination/StructuralOrder.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) $<
+	@$(echo) "ok"
 
 term3 : Termination/Tuple.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) $<
+	@$(echo) "ok"
 
 polydep : AIM5/PolyDep/Main.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -iAIM5/PolyDep $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -iAIM5/PolyDep $<
+	@$(echo) "ok"
 
 hello : AIM6/HelloAgda/Everything.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -iAIM6/HelloAgda $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -iAIM6/HelloAgda $<
+	@$(echo) "ok"
 
 path : AIM6/Path/All.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -iAIM6/Path $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -iAIM6/Path $<
+	@$(echo) "ok"
 
 regexp-talk : AIM6/RegExp/talk/Everything.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -iAIM6/RegExp/talk $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -iAIM6/RegExp/talk $<
+	@$(echo) "ok"
 
 aim4-bag : AIM4/bag/Bag.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -iAIM4/bag $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -iAIM4/bag $<
+	@$(echo) "ok"
 
 ac : tactics/ac/AC.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -itactics/ac $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -itactics/ac $<
+	@$(echo) "ok"
 
 effects : sinatra/Example.agda
-	@echo "Testing $<..."
-	@echo :q | $(run_agda) -isinatra $<
-	@echo "ok"
+	@$(echo) "Testing $<..."
+	@$(echo) :q | $(run_agda) -isinatra $<
+	@$(echo) "ok"
 
 minmax : order/MinMax.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -ilib -iorder $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -ilib -iorder $<
+	@$(echo) "ok"
 
 real : lib/Data/Real/CReal.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -ilib $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -ilib $<
+	@$(echo) "ok"
 
 view : vfl/Typechecker.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) $<
+	@$(echo) "ok"
 
 simplelib : simple-lib/TestLib.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -isimple-lib $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -isimple-lib $<
+	@$(echo) "ok"
 
 lib : lib/Test.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -ilib $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -ilib $<
+	@$(echo) "ok"
 
 divmod : arith/DivMod.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -isimple-lib $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -isimple-lib $<
+	@$(echo) "ok"
 
 highlighting : syntax/highlighting/All.agda
-	@echo "Testing $<... "
-	@echo :q | $(run_agda) -isyntax/highlighting $<
-	@echo "ok"
+	@$(echo) "Testing $<... "
+	@$(echo) :q | $(run_agda) -isyntax/highlighting $<
+	@$(echo) "ok"
 
 test : $(tests)
 
 $(tests) : %.test : %
-	@echo -n "Testing $<... "
-	@echo :q | $(run_agda) $<
-	@echo "ok"
+	@$(echo) -n "Testing $<... "
+	@$(echo) :q | $(run_agda) $<
+	@$(echo) "ok"
 
