--- a/Agda.cabal
+++ b/Agda.cabal
@@ -9,7 +9,7 @@ maintainer:      Ulf Norell <ulfn@cs.chalmers.se>
 homepage:        http://www.cs.chalmers.se/~ulfn/Agda/
 category:        Dependent types
 synopsis:        A dependently typed proof checker / programming language.
-tested-with:     GHC == 6.8.2
+tested-with:     GHC == 6.8.2, GHC == 6.8.3
 extra-source-files: src/full/Agda/undefined.h
 
 library
