--- a/Agda.cabal
+++ b/Agda.cabal
@@ -9,7 +9,7 @@ maintainer:      Ulf Norell <ulfn@cs.chalmers.se>
 homepage:        http://www.cs.chalmers.se/~ulfn/Agda/
 category:        Dependent types
 synopsis:        A dependently typed proof checker / programming language.
-tested-with:     GHC == 6.8.2, GHC == 6.8.3
+tested-with:     GHC == 6.8.3
 extra-source-files: src/full/Agda/undefined.h
 
 library
@@ -25,7 +25,7 @@ library
                    old-time >= 1 && < 2,
                    bytestring >= 0.9.0.1 && < 1,
                    array >= 0.1 && < 1,
-                   binary == 0.4.1,
+                   binary >= 0.4.1 && < 0.5,
                    zlib >= 0.4.0.1 && < 1,
                    filepath >= 1.1 && < 2,
                    process >= 1.0 && < 2
