--- a/Agda.cabal
+++ b/Agda.cabal
@@ -192,4 +192,4 @@ library
                    Agda.Utils.Tuple
                    Agda.Utils.Unicode
                    Agda.Version
-  ghc-options:     -Wall -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-simple-patterns -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-unused-imports -fno-warn-type-defaults -fno-warn-orphans -auto-all
+  ghc-options:     -O -Wall -Werror -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-simple-patterns -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-unused-imports -fno-warn-type-defaults -fno-warn-orphans -auto-all
