added place holder for polarity information to definitions

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -139,6 +139,7 @@ library
                    Agda.TypeChecking.Monad.Trace
                    Agda.TypeChecking.Monad
                    Agda.TypeChecking.Patterns.Match
+                   Agda.TypeChecking.Polarity
                    Agda.TypeChecking.Positivity
                    Agda.TypeChecking.Pretty
                    Agda.TypeChecking.Primitive
