--- a/Agda.cabal
+++ b/Agda.cabal
@@ -194,5 +194,6 @@ library
                    Agda.Utils.Trie
                    Agda.Utils.Tuple
                    Agda.Utils.Unicode
+                   Agda.Utils.Warshall
                    Agda.Version
   ghc-options:     -O -Wall -Werror -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-simple-patterns -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-unused-imports -fno-warn-type-defaults -fno-warn-orphans -auto-all
