Removed -O. Cabal now turns on optimisations by default.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -199,4 +199,4 @@ library
                    Agda.Utils.Unicode
                    Agda.Utils.Warshall
                    Agda.Version
-  ghc-options:     -O -Wall -Werror -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-simple-patterns -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-unused-imports -fno-warn-type-defaults -fno-warn-orphans -auto-all
+  ghc-options:     -Wall -Werror -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-simple-patterns -fno-warn-unused-matches -fno-warn-unused-binds -fno-warn-unused-imports -fno-warn-type-defaults -fno-warn-orphans -auto-all
