--- a/Agda.cabal
+++ b/Agda.cabal
@@ -16,7 +16,7 @@ library
   hs-source-dirs:  src/full
   build-depends:   base >= 3 && < 4,
                    mtl >= 1.1 && < 2,
-                   QuickCheck >= 2.1 && < 3,
+                   QuickCheck == 2.1.0.1,
                    haskell98 >= 1.0.1 && < 2,
                    haskell-src >= 1.0.1.1 && < 2,
                    containers >= 0.1.0 && < 1,
