--- a/Agda.cabal
+++ b/Agda.cabal
@@ -5,7 +5,7 @@ build-type:      Simple
 license:         OtherLicense
 license-file:    LICENSE
 author:          Ulf Norell, Catarina Coquand, Makoto Takeyama, Nils Anders Danielsson, Andreas Abel, ...
-maintainer:      Ulf Norell <ulfn@cs.chalmers.se>
+maintainer:      Ulf Norell <ulfn@chalmers.se>
 homepage:        http://www.cs.chalmers.se/~ulfn/Agda/
 category:        Dependent types
 synopsis:        A dependently typed proof checker / programming language.
