--- a/src/main/Agda-executable.cabal
+++ b/src/main/Agda-executable.cabal
@@ -13,14 +13,10 @@ synopsis:        A dependently typed proof checker / programming language.
 executable agda
   main-is:       Main.hs
   build-depends: Agda,
-                 base >= 3 && < 4,
-                 readline >= 1.0.1 && < 2
-  extra-libraries: readline
+                 base
 
 -- executable agda_p
 --   main-is:         Main.hs
 --   build-depends:   Agda,
---                    base >= 3 && < 4,
---                    readline >= 1.0.1 && < 2
---   extra-libraries: readline
+--                    base
 --   ghc-options:     -prof -auto-all
