--- a/Agda.cabal
+++ b/Agda.cabal
@@ -29,7 +29,8 @@ library
                    zlib >= 0.4.0.1 && < 1,
                    filepath >= 1.1 && < 2,
                    process >= 1.0 && < 2,
-                   haskeline >= 0.3 && < 0.4
+                   haskeline >= 0.3 && < 0.4,
+                   utf8-string >= 0.3 && < 0.4
   if impl(ghc >= 6.10)
     build-depends: ghc-prim >= 0.1 && < 1
   build-tools:     happy >= 1.15 && < 2,
