If <M>.agda is compiled the resulting binary is now called ./<M>.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -111,7 +111,7 @@ highlighting : syntax/highlighting/All.agda
 compiler : MAlonzo/main.agda
 	@$(echo) "Testing $<... "
 	@$(echo) :q | $(run_agda) --compile --malonzodir=MAlonzo -iMAlonzo $<
-	@MAlonzo/MAlonzo/Mmain
+	@./main
 	@$(echo) "ok"
 
 test : $(tests)
