Now one can compile using the Emacs interface (C-c C-x C-c). + Furthermore an interface file is written out for the current module   when it has been successfully type checked using the Emacs   interface. (Previously interface files were written out for all   imported modules, but not the current one.)

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -30,7 +30,8 @@ library
                    filepath >= 1.1 && < 2,
                    process >= 1.0 && < 2,
                    haskeline >= 0.3 && < 0.4,
-                   utf8-string >= 0.3 && < 0.4
+                   utf8-string >= 0.3 && < 0.4,
+                   process >= 1.0.1.0 && < 2
   if impl(ghc >= 6.10)
     build-depends: ghc-prim >= 0.1 && < 1
   build-tools:     happy >= 1.15 && < 2,
