--- a/Agda.cabal
+++ b/Agda.cabal
@@ -14,6 +14,7 @@ extra-source-files: src/full/Agda/undefined.h
 
 library
   hs-source-dirs:  src/full
+                   dist/build/autogen
   build-depends:   base >= 3 && < 4,
                    mtl >= 1.1 && < 2,
                    QuickCheck == 2.1.0.1,
