Updated test/fail because "Checking..." is printed more often now.

--- a/test/fail/Makefile
+++ b/test/fail/Makefile
@@ -45,7 +45,7 @@ $(allout) : %.err : %.agda
 	@if $(agda) -v$(V) $(shell if [ -e $*.flags ]; then cat $*.flags; fi) $< > $*.tmp; \
 		then echo "Unexpected success"; rm -f $*.tmp; false; \
     else if [ -s $*.tmp ]; \
-				 then sed -e "s/[^ ]*test.fail.//g" $*.tmp > $@; cat $@; rm -f $*.tmp; true; \
+				 then sed -e "s/[^ (]*test.fail.//g" $*.tmp > $@; cat $@; rm -f $*.tmp; true; \
 				 else rm -f $@ $*.tmp; false; \
 				 fi; \
 		fi
@@ -57,7 +57,7 @@ $(allstems) : % : %.err
 	@if $(agda) -v$(V) $(shell if [ -e $*.flags ]; then cat $*.flags; fi) $*.agda \
 		 > $*.tmp.2; \
 		then echo "Unexpected success"; rm -f $*.tmp.2; false; \
-    else sed -e "s/[^ ]*test.fail.//g" $*.tmp.2 > $*.tmp; \
+    else sed -e "s/[^ (]*test.fail.//g" $*.tmp.2 > $*.tmp; \
 				 echo `cat $*.err` > $*.tmp.2; \
 				 echo `cat $*.tmp` > $*.tmp.3; \
 				 true; \
