minor: fixed bug in test/fail Makefile

--- a/test/fail/Makefile
+++ b/test/fail/Makefile
@@ -68,7 +68,7 @@ $(allstems) : % : %.err
 			 cat $*.err; \
 			 echo "== New error ==="; \
 			 cat $*.tmp; \
-			 rm -f $*.tmp; rm -f $*.tmp.2; rm -f $*.tmp.3 \
+			 rm -f $*.tmp; rm -f $*.tmp.2; rm -f $*.tmp.3; \
 			 false; \
 	 fi
 
