Attempt to fix problem with subject reduction. + Idea: Names occurring under coinductive constructors are only   unfolded as a result of pattern matching. This differs from the   previous approach in which no evaluation took place under   coinductive constructors. (This idea is due to Thorsten Altenkirch.)   However, the presence of meta-variables complicates the   implementation, and I don't know enough about the Agda internals to   be reasonably confident that this patch is "correct". Furthermore   delaying all names occurring under coinductive constructors is quite   restrictive. I will hence try another approach.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -97,6 +97,7 @@ library
                    Agda.Syntax.Concrete.Operators
                    Agda.Syntax.Concrete.Pretty
                    Agda.Syntax.Concrete
+                   Agda.Syntax.Delay
                    Agda.Syntax.Fixity
                    Agda.Syntax.Info
                    Agda.Syntax.Internal
