Experiment: Another way to handle coinduction. + Uses of defined names can now be explicitly delayed (syntax: .f x,   m .+ n, .⟦ e ⟧ or .⟦ e .⟧ or ⟦ e .⟧). Delayed names are only   unfolded if they occur immediately under a coinductive constructor   (with no coinductive constructor in between) and pattern matching is   performed on this constructor. The termination checker only accepts   guarded corecursion if at least one name on every call path is   delayed. (This idea is a variant of an idea due to Thorsten   Altenkirch.) + This approach has the advantage that one can choose to only delay a   subset of the names occurring under a coinductive constructor, thus   strengthening the definitional equality. Another advantage is that   there is now syntax for a delayed thing; this can make it easier to   understand Agda's output. + However, the current implementation has serious problems (I'm not   even sure if definitional equality is transitive), and it is not   obvious that they can be fixed.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -97,7 +97,6 @@ library
                    Agda.Syntax.Concrete.Operators
                    Agda.Syntax.Concrete.Pretty
                    Agda.Syntax.Concrete
-                   Agda.Syntax.Delay
                    Agda.Syntax.Fixity
                    Agda.Syntax.Info
                    Agda.Syntax.Internal
@@ -135,6 +134,7 @@ library
                    Agda.TypeChecking.Conversion
                    Agda.TypeChecking.Coverage
                    Agda.TypeChecking.Coverage.Match
+                   Agda.TypeChecking.Delay
                    Agda.TypeChecking.DisplayForm
                    Agda.TypeChecking.Empty
                    Agda.TypeChecking.EtaContract
