--- a/src/main/Agda-executable.cabal
+++ b/src/main/Agda-executable.cabal
@@ -1,22 +1,22 @@
 name:            Agda-executable
 version:         2.1.3
-cabal-version:   >= 1.2 && < 2
+cabal-version:   >= 1.4 && < 2
 build-type:      Simple
-license:         BSD3
+license:         OtherLicense
 license-file:    LICENSE
-author:          Ulf Norell, Catarina Coquand, Makoto Takeyama, Nils Anders Danielsson, ...
-maintainer:      Ulf Norell <ulfn@cs.chalmers.se>
+author:          Ulf Norell, Catarina Coquand, Makoto Takeyama, Nils Anders Danielsson, Andreas Abel, ...
+maintainer:      Ulf Norell <ulfn@chalmers.se>
 homepage:        http://wiki.portal.chalmers.se/agda/
+bug-reports:     http://code.google.com/p/agda/issues/list
 category:        Dependent types
-synopsis:        A dependently typed proof checker / programming language.
+synopsis:        Command-line program for type-checking and compiling Agda programs
+description:
+  This package provides a command-line program for type-checking and
+  compiling Agda programs. The program can also generate hyperlinked,
+  highlighted HTML files from Agda sources.
+tested-with:     GHC == 6.8.3 && == 6.10.1
 
 executable agda
   main-is:       Main.hs
   build-depends: Agda,
                  base
-
--- executable agda_p
---   main-is:         Main.hs
---   build-depends:   Agda,
---                    base
---   ghc-options:     -prof -auto-all
