--- a/Agda.cabal
+++ b/Agda.cabal
@@ -18,12 +18,12 @@ description:
   Emacs interface (the type checker can assist in the development of
   your code).
   .
-  Agda is a proof assistant: It is an interactive system for writing
-  and checking proofs. Agda is based on intuitionistic type theory, a
-  foundational system for constructive mathematics developed by the
-  Swedish logician Per Martin-Löf. It has many similarities with other
-  proof assistants based on dependent types, such as Coq, Epigram and
-  NuPRL.
+  Agda is also a proof assistant: It is an interactive system for
+  writing and checking proofs. Agda is based on intuitionistic type
+  theory, a foundational system for constructive mathematics developed
+  by the Swedish logician Per Martin-Löf. It has many similarities
+  with other proof assistants based on dependent types, such as Coq,
+  Epigram and NuPRL.
 tested-with:     GHC == 6.8.3 && == 6.10.1
 extra-source-files: src/full/Agda/undefined.h
                     README
