The Emacs mode is now included in the main Cabal package. + It is installed together with the library. The user still has to   instruct Emacs to use the mode.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -30,8 +30,9 @@ description:
 tested-with:     GHC == 6.8.3 && == 6.10.1
 extra-source-files: src/full/Agda/undefined.h
                     README
-data-dir:        src/data
-data-files:      Agda.css
+data-dir:           src/data
+data-files:         Agda.css
+                    emacs-mode/*.el
 
 library
   hs-source-dirs:  src/full
