Moved the --emacs-mode feature to a separate program (agda-mode). + Having a hard-coded path in the main Agda executable seems like a   bad idea. Now distributors have the option to install the Emacs mode   wherever they like, and they can choose whether or not to include   the agda-mode program. + The agda-mode program also has a second use: If invoked with the   "setup" option it tries to add setup code for the Emacs mode to the   current user's .emacs file.

--- a/Agda.cabal
+++ b/Agda.cabal
@@ -233,3 +233,12 @@ library
   if impl(ghc >= 6.10)
     ghc-options:   -fwarn-warnings-deprecations -fwarn-deprecated-flags
                    -fwarn-dodgy-foreign-imports
+
+executable agda-mode
+  hs-source-dirs:  src/agda-mode
+  main-is:         Main.hs
+  other-modules:   Paths_Agda
+  build-depends:   base >= 3 && < 4,
+                   filepath >= 1.1 && < 2,
+                   process >= 1.0.1.0 && < 2,
+                   utf8-string >= 0.3 && < 0.4
