--- a/Agda.cabal
+++ b/Agda.cabal
@@ -1,5 +1,5 @@
 name:            Agda
-version:         2.2.1
+version:         2.2.2
 cabal-version:   >= 1.6 && < 2
 build-type:      Simple
 license:         OtherLicense
@@ -39,6 +39,11 @@ data-files:         Agda.css
 source-repository head
   type:     darcs
   location: http://code.haskell.org/Agda/
+
+source-repository this
+  type:     darcs
+  location: http://code.haskell.org/Agda/
+  tag:      2.2.2
 
 library
   hs-source-dirs:  src/full
