--- a/src/main/Agda-executable.cabal
+++ b/src/main/Agda-executable.cabal
@@ -1,5 +1,5 @@
 name:            Agda-executable
-version:         2.2.1
+version:         2.2.2
 cabal-version:   >= 1.6 && < 2
 build-type:      Simple
 license:         OtherLicense
@@ -20,7 +20,13 @@ source-repository head
   type:     darcs
   location: http://code.haskell.org/Agda/
 
+source-repository this
+  type:     darcs
+  location: http://code.haskell.org/Agda/
+  tag:      2.2.2
+
 executable agda
   main-is:       Main.hs
-  build-depends: Agda == 2.2.1,
+  build-depends: Agda == 2.2.2,
                  base
+
