--- a/src/main/Agda-executable.cabal
+++ b/src/main/Agda-executable.cabal
@@ -23,5 +23,5 @@ source-repository head
 executable agda
   main-is:       Main.hs
   build-depends: Agda == 2.2.3,
-                 base
+                 base >= 3 && < 4
 
