--- a/src/main/Agda-executable.cabal
+++ b/src/main/Agda-executable.cabal
@@ -24,5 +24,5 @@ executable agda
   main-is:       Main.hs
   build-depends: Agda == 2.2.3,
                  -- Nothing is used from the following package, except
-                 -- for one use of the module name "Prelude".
+                 -- for the prelude.
                  base >= 3 && < 6
